<resources>
    <string name="app_name">Budget</string>
    <string name="dbinspector_app_name">Budget DB</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_transaction_label">Add transaction</string>
    <string name="add_category_label">Add category</string>
    <string name="yesterday">Yesterday</string>
    <string name="amount">Amount</string>
    <string name="submit">Submit</string>
    <string name="make_transaction_select_account">Select account</string>
    <string name="make_transaction_select_category">Select category</string>
    <string name="home">Home</string>
    <string name="accounts">Accounts</string>
    <string name="categories">Categories</string>
    <string name="transactions">Transactions</string>
    <string name="other">Other</string>
    <string name="about">About</string>
    <string name="hint_category_name">Category name</string>
    <string name="done">Done</string>
    <string name="hint_account_name">Account name</string>
    <string name="hint_account_initial_amount">Initial amount</string>
    <string name="delete">Delete</string>
    <string name="category_overview">Category overview</string>
    <string name="overview">Overview</string>
    <string name="back">Back</string>
    <string name="max_count_reached">Max count reached</string>
    <string name="negative_amount">-%s</string>
</resources>
