<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetStart="72dp"
            app:navigationIcon="@android:drawable/ic_menu_close_clear_cancel"
            app:layout_collapseMode="none"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:clipToPadding="false"
                android:padding="20dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    card_view:cardCornerRadius="4dp"
                    card_view:contentPadding="4dp"
                    card_view:cardElevation="4dp"
                    card_view:cardMaxElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RadioGroup
                            android:id="@+id/radio_group_date_chooser"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radio_button_date_picker"
                                android:layout_width="0dp"
                                android:layout_height="40dp"
                                android:layout_weight="1"
                                android:background="@drawable/selector_date_radio_button"
                                android:button="@null"
                                android:checked="true"
                                android:gravity="center"
                                android:textAppearance="@android:style/TextAppearance.Material.Subhead"
                                android:textColor="@drawable/selector_date_radio_button_text"
                                tools:text="10 jan"/>

                            <RadioButton
                                android:id="@+id/radio_button_yesterday"
                                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                                android:layout_width="0dp"
                                android:layout_height="40dp"
                                android:layout_weight="1"
                                android:background="@drawable/selector_date_radio_button"
                                android:button="@null"
                                android:gravity="center"
                                android:text="@string/yesterday"
                                android:textAppearance="@android:style/TextAppearance.Material.Subhead"
                                android:textColor="@drawable/selector_date_radio_button_text"/>

                        </RadioGroup>

                        <LinearLayout
                            android:id="@+id/layout_account"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:clickable="true"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/text_account_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                                tools:text="Cash"/>

                            <TextView
                                android:id="@+id/text_account_amount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@android:style/TextAppearance.Material.Small"
                                tools:text="100 USD"/>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layout_expense_category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:clickable="true"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/text_expense_category"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                                tools:text="Groceries"/>
                        </LinearLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/layout_amount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <EditText
                                android:id="@+id/edit_amount"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/amount"
                                android:inputType="number"/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.v7.widget.ButtonBarLayout
                            style="@android:style/Widget.Material.ButtonBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp">

                            <Button
                                android:id="@+id/button_cancel"
                                style="@android:style/Widget.Material.ButtonBar"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@android:string/cancel"
                                android:textAppearance="@android:style/TextAppearance.Material.Subhead"
                                tools:text="10 jan"/>

                            <Button
                                android:id="@+id/button_submit"
                                style="@android:style/Widget.Material.ButtonBar"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/submit"
                                android:textAppearance="@android:style/TextAppearance.Material.Subhead"/>

                        </android.support.v7.widget.ButtonBarLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>